# devops-control-center

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
.antigravitycli/: d4ef959d-549d-4d11-99f2-4dbf96d918da.json
.github/workflows/: deploy-compose.yml  deploy-k8s.yml.disabled  deploy.yml  test.yml
agent/: Cargo.toml  Dockerfile
agent/src/: main.rs
apps/agent/: Cargo.toml  Dockerfile
apps/agent/src/: docker.rs  kubernetes.rs  main.rs  models.rs  pty_handler.rs  system.rs
apps/agent/src/k8s/: client.rs  deployments.rs  logs.rs  mod.rs  monitor.rs  pod_health.rs
apps/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.js
apps/frontend/src/: App.css  App.jsx  index.css
apps/frontend/src/__tests__/: regression.test.jsx
apps/frontend/src/components/: ErrorBoundary.jsx
apps/frontend/src/hooks/: useLogs.js  useTerminal.js  useTheme.js
apps/orchestrator/: Dockerfile  pom.xml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
grafana/provisioning/dashboards/: devops.yml
infrastructure/k8s/: agent.yaml  cert-manager.yaml  frontend.yaml  grafana.yaml  ingress.yaml  network-policies.yaml  node-exporter.yaml  orchestrator.yaml  pdb.yaml  prometheus.yaml  redirect-https.yaml
infrastructure/nginx/: devops-locations.conf  devops.mattdev0.tech.conf
infrastructure/terraform/: main.tf
k8s/: agent.yaml  frontend.yaml  grafana.yaml  orchestrator.yaml  prometheus.yaml
orchestrator/: Dockerfile  pom.xml
scripts/: backup.sh  deploy.sh  health-check.sh
(+54 files in other folders)
