[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]

# STREAMING_CHUNK: Configuring web server dependencies

axum = "0.7"
tokio = { version = "1.36", features = ["full"] }

# STREAMING_CHUNK: Configuring serialization for JSON responses

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# STREAMING_CHUNK: Configuring system info gathering

sysinfo = "0.30"
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"